--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #Properties para mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#Sino existe la base de datos creala
+#Sino exite la base de datos creala
 spring.datasource.url=jdbc:mysql://localhost:3306/namedb?createDatabaseIfNotExist=true
-spring.datasource.username=your_name
-spring.datasource.password=your_password
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.jpa.properties.hibernate.show_sql=false
@@ -12,11 +12,12 @@ spring.jpa.properties.hibernate.format_sql=false
 #Properties to send messages
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=slion641@gmail.com
-spring.mail.password=xbyn uaoa mrpd gwak
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.debug=true
+
