--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Sino existe la base de datos creala
 spring.datasource.url=jdbc:mysql://localhost:3306/namedb?createDatabaseIfNotExist=true
-spring.datasource.username=your_name
-spring.datasource.password=your_password
+spring.datasource.username=root
+spring.datasource.password=12345678
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.jpa.properties.hibernate.show_sql=false
